# RocketPy

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: build_wheels.yml
PyRocketSim/: CMakeCache.txt  Makefile  __init__.py  _rocketSim  cmake_install.cmake  test.py  visualization.py
PyRocketSim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cpp/: rocketSIM.cpp  rocketSIM1
cpp/simcalc/: calc.hpp
cpp/vroot/: root.hpp
python/bindings/: CMakeLists.txt  wrapper_root.cpp  wrapper_simcalc.cpp
rocket/: test.py  visualization.py
src/: compile.sh  rocketSIM.cpp  rocketSIM1  wrapper.cpp
src/PyRocketSim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cpress/: compile.sh
src/simcalc/: calc.cpp  calc.hpp
src/vroot/: root.cpp  root.hpp
