[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.15",
    "pybind11>=2.6",
    "scikit-build>=0.13",
    "cibuildwheel",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-frontend = "build"
manylinux-x86_64-image = "manylinux2014"
test-command = "python -c \"import PyRocketSim; PyRocketSim.__version__\""

[tool.cibuildwheel.linux]
before-build = "apt-get update && apt-get install -y build-essential cmake"