[build-system]
requires = ["setuptools", "wheel", "cmake>=3.15", "pybind11", "ninja"]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"

[tool.mypy]
files = "setup.py"
python_version = "3.13"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true